# Langchain-research-assistant

./: .env.example  .env.optimized  .gitignore  CITATIONS.md  CLI_GUIDE.md  Makefile  PROJECT_STRUCTURE.md  README.md  SETUP.md  STREAMING.md  demo_streaming.py  project_1_multi_agent_research_assistant_lang_chain_lang_smith_starter_kit.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_parallel_benchmark.sh  start.sh  test_document.md  test_streaming.py
app/: __init__.py  api.py  api_streaming.py  cli.py  iterative_pipeline.py  pipeline.py  streaming_pipeline.py
app/chains/: __init__.py  critic.py  orchestrator.py  researcher.py  synthesizer.py
app/core/: __init__.py  config.py  llm.py  state.py
app/eval/: __init__.py  datasets.jsonl  rubric.md  run_eval.py
app/rag/: __init__.py  ingest.py  store.py
app/tools/: __init__.py  firecrawl.py  retriever.py  web_search.py
benchmark_results/: parallel_benchmark_20250809_151511.csv  parallel_benchmark_20250809_151842.csv
prompts/: critic.claude  orchestrator.claude  researcher.claude  synthesizer.claude
scripts/: run_benchmark.sh
tests/: benchmark_models.py  benchmark_parallel.py  conftest.py  test_models.py  test_multi_model.py
tests/e2e/: test_cli_e2e.py
tests/integration/: test_pipeline_integration.py  test_rag_integration.py
tests/unit/: test_chains.py  test_state.py  test_tools.py
